tests/variables/valid/assign_val.su
s32 main() {
    s32 a;
    s32 b = a = 2;
    return a+b;
}