tests/variables/invalid/syntax_err_bad_lvalue.su
s32 main() {
    s32 a = 2;
    a + 3 = 4;
    return a;
}